@@ -51,6 +51,9 @@ COCKPIT
 KUDOS TO:
 
 - Alexey I. Froloff for Eucalyptus-friendly generated URLs patch.
+- David Kocher for a RestS3Service patch to allow advanced users
+  to provide their own RequestEntity classes when uploading objects.
+
 
 -------------
 Version 0.7.3
